corrects double click overlapping

--- a/src/components/note.css
+++ b/src/components/note.css
@@ -7,5 +7,6 @@ display: block;
 position: absolute;
 text-align: center;
 border: 0;
+z-index: 1;
 }
 
